[package]
name = "cuda-captain"
version = "0.1.0"
edition = "2021"
description = "Fleet command — missions, subtasks, best-available selection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-captain"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
